<resources>
    <string name="app_name">Interview</string>
    <string name="username_input_label">Enter your username:</string>
    <string name="username_hint">username</string>
    <string name="password_input_label">Enter your password:</string>
    <string name="password_hint">password</string>
    <string name="login_text">Log In</string>
    <string name="save_username_label">save username</string>
    <string name="actionbar_login">Who ye be?</string>
    <string name="actionbar_profile">YER PROFILE:</string>
    <string name="invalid_credentials_toast">Invalid username/password combination. Please try again.</string>
</resources>
